fix(MENUPOC) vertical align of thirt menu item separator text

--- a/www/front_src/src/styles/partials/_side-nav.scss
+++ b/www/front_src/src/styles/partials/_side-nav.scss
@@ -740,7 +740,7 @@ a {
         background-color: $lightblue-centreon-primary;
         position: absolute;
         display: block;
-        top: 9px;
+        top: 10px;
       }
       span {
         font-family: $primary-font-regular;
